<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/main_top_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/main_top_btr"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/main_infolayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/main_info_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/maintext_cpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_maxhz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_rom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_phonename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maintext_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:textColor="#ffffff"
            android:textSize="15dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_iconlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/main_ll_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_onclick"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_iv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/main_jizhangqi"
                    android:src="@drawable/jz_icon" />

                <TextView
                    android:id="@+id/main_tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/main_jizhangqi"
                    android:textColor="#313131" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/main_ll_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_onclick"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_iv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/main_fangdao"
                    android:src="@drawable/bw_icon" />

                <TextView
                    android:id="@+id/main_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/main_benwang"
                    android:textColor="#313131" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/main_ll_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_onclick"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_iv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/main_fangdao"
                    android:src="@drawable/js_icon" />

                <TextView
                    android:id="@+id/main_tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/main_jisuan"
                    android:textColor="#313131" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/main_ll_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_onclick"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_iv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/main_fangdao"
                    android:src="@drawable/tq_icon" />

                <TextView
                    android:id="@+id/main_tv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/main_tianqi"
                    android:textColor="#313131" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/main_ll_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_onclick"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_iv_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/main_fangdao"
                    android:src="@drawable/wz_icon" />

                <TextView
                    android:id="@+id/main_tv_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/main_location"
                    android:textColor="#313131" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/main_ll_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_onclick"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_iv_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/main_fangdao"
                    android:src="@drawable/fy_icon" />

                <TextView
                    android:id="@+id/main_tv_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/fanyi"
                    android:textColor="#313131" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
    </LinearLayout>


    <SlidingDrawer
        android:id="@+id/main_slidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom"
        android:content="@+id/content"
        android:handle="@+id/handle">

        <Button
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_up_pressed" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="292dp"
            android:layout_height="106dp"
            android:background="@drawable/main_menu"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_help_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/mian_menu_bt_selector"
                android:text="@string/main_help"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/main_hidden_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/mian_menu_bt_selector"
                android:text="@string/main_hiddenguanggao"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/main_about_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/mian_menu_bt_selector"
                android:text="@string/main_bt_about"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/main_exit_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/mian_menu_bt_selector"
                android:text="@string/main_bt_exit"
                android:textColor="#ffffff" />
        </LinearLayout>
    </SlidingDrawer>

</FrameLayout>